agic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pipelineiq-agic
  namespace: pipelineiq
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: azure-application-gateway
  tls:
    - hosts:
        - pipelineiqsolutions.xyz
      secretName: pipelineiq-tls
  rules:
    - host: pipelineiqsolutions.xyz
      http:
        paths:
          - path: /api/webhooks/github
            pathType: Prefix
            backend:
              service:
                name: webhook-service
                port:
                  number: 8087
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8081
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: dashboard-api
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
